<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="notification"
        android:summary="@string/Notification_sum"
        android:title="@string/Notification" />
    <PreferenceCategory android:title="My Wealth">

        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="myBitcoin"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/MyBitcoins_sum"
            android:title="@string/MyBitcoins" />
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="myEther"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/MyEther_sum"
            android:title="@string/MyEther" />
    </PreferenceCategory>
    <EditTextPreference
        android:defaultValue="0"
        android:inputType="number"
        android:key="myRials"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/MyRials_sum"
        android:title="@string/MyRials" />
    <EditTextPreference
        android:defaultValue="2"
        android:inputType="number"
        android:key="changePercent"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/PercentTosell_sum"
        android:title="@string/PercentTosell" />
</PreferenceScreen>